--- a/INSTALL
+++ b/INSTALL
@@ -1,25 +1,51 @@
+lspf - ISPF clone for linux systems
+
+Requirements:
+gcc 
+ncurses 
+boost 
+oorexx
+file
+
+
+Boost and ncurses required to compile: 
+    - lspf.cpp
+
+OOREXX required for: 
+    - POREXX1.cpp - module for writing lspf applications in REXX 
+    - PEDRXM1.cpp - edit macro module for writing edit macros in REXX
+
+file required for:
+    - PBRO01A.cpp, as it is linked with -lmagic
+
 To install:
 
+There are compilation scripts included in the source tree for compiling all
+of the different peices of this software. 
+    - compsetup compiles setup.cpp
+    - comp1 compiles lspf.cpp
+    - compapps compiles all of the SPF applications in the src/Apps directory
+
 1)  Customise lspf.h  Make sure paths ZSPROF, ZUPROF, MLIB etc exist.
-2)  Compile and run setup.cpp to create the default ISPSPROF profile member, ISPCMDS and USRCMDS command tables.
+
+2)  Compile and run setup.cpp to create the default ISPSPROF profile member,
+    ISPCMDS and USRCMDS command tables.
+
 3)  Compile lspf.cpp
+
 4)  Compile applications
-5)  Copy directories mlib, plib and tlib to the paths defined in MLIB, PLIB and TLIB in lspf.h if different.
-    If using keylists, make sure key table file ISRKEYP in the tlib/ directory is in the ZUPROF directory (usually ~/.lspf/)
 
-You can use comp1 to compile lspf.cpp, compsetup to compile setup.cpp and compapps for all applications in directory Apps
-This has been developed on Arch Linux - link options may vary (eg. if ncurses is built with --with-termlib add -ltinfo )
+5)  Copy directories mlib, plib and tlib to the paths defined in MLIB, PLIB and
+    TLIB in lspf.h if different. If using keylists, make sure key table file
+    ISRKEYP in the tlib/ directory is in the ZUPROF directory (usually ~/.lspf/)
 
-Boost and ncurses required to compile lspf.cpp
+This has been developed on Arch Linux - link options may vary (eg. if ncurses
+is built with --with-termlib add -ltinfo )
 
-OOREXX required for POREXX1.cpp (OOREXX interface module for writing lspf applications in REXX) and PEDRXM1.cpp (edit
-macro interface module for writing edit macros in REXX)
-
-file required for PBRO01A.cpp as it is linked with -lmagic
 
 Run lspf in a terminal
 
-Works with:
+Known to work with:
 gcc 7.2.1
 ncurses 6.0
 boost 1.65.1
